# test-sentry-monorepository

./: README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  project.json
backend/python-backend/: README.md  project.json  pyproject.toml
backend/python-backend/python_backend/: index.py  main.py
backend/python-backend/tests/: test_index.py
backend/test-backend/: build.gradle  project.json
backend/test-backend/src/main/java/com/example/test_backend/: SentryTestController.java  TestBackendApplication.java
backend/test-backend/src/main/resources/: application.properties
backend/test-backend/src/test/java/com/example/test_backend/: TestBackendApplicationTests.java
frontend/test-frontend/: project.json  tsconfig.json
frontend/test-frontend/src/: index.html  main.ts
frontend/test-frontend/src/app/: app.config.ts  app.html  app.ts  nx-welcome.ts
src/: index.html
src/app/: app.ts  nx-welcome.ts
