[tool.coverage.run]
branch = true
source = [ "python_backend" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../coverage/./python-backend/html' --cov-report xml:'../coverage/./python-backend/coverage.xml' --junitxml='../reports/./python-backend/unittests/junit.xml' --html='../reports/./python-backend/unittests/html/index.html'"

[tool.poetry]
name = "python-backend"
version = "1.0.0"
description = ""
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "python_backend"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.11"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
